--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,9 @@ body {
   background-color: #f5f5f5;
   box-sizing: border-box;
 }
+.btn{
+  cursor: pointer;
+}
 
 /* navbar */
 nav {
@@ -46,6 +49,7 @@ nav div h3 {
   background-color: #c6e4d6;
   padding: 80px 60px;
   border-radius: 24px;
+  margin-bottom: 80px;
 }
 .hero-context {
   display: flex;
@@ -77,9 +81,107 @@ nav div h3 {
 }
 
 /* pillars of bangladesh section */
+.pillars-title{
+  margin-bottom: 32px; 
+  font-size: 40px;
+  font-weight: bold;
+}
 .pillars-card {
   display: flex;
   justify-content: space-between;
 }
-.card {
+ .pillars-card .card {
+  width: 302px;
+  height: 244px;
+  background-color: white;
+  border-radius: 16px;
+  padding: 24px;
+}
+.pillars-card .card-title {
+  font-size: 20px;
+  font-weight: bold;
+  color: rgba(14, 14, 14, 0.8);
+}
+
+.pillars-card .card-description {
+  line-height: 24px;
+  font-size: 16px;
+  color:rgba(14, 14, 14, 0.7);
+}
+
+/* vision-section */
+
+.vision-title{
+  font-size: 40px;
+  margin-bottom: 24px;
+  margin-top: 80px;
+  font-weight: bold;
+  
+}
+.vision-description{ 
+  line-height: 24px;
+  font-size: 16px;
+  color:rgba(14, 14, 14, 0.7);
+  margin-bottom: 32px;
+}
+
+.vision-section .card-description{
+  line-height: 24px;
+  font-size: 16px;
+  color:rgba(14, 14, 14, 0.7);
+  width: 346px;
+}
+
+.vision-section .card-title{
+  margin-top: 24px;
+  margin-bottom: 12px;
+  font-size: 20px;
+  font-weight: bold;
+  color: rgba(14, 14, 14, 0.8);
+
+}
+
+.vision-section .card{  
+    padding: 32px;
+    height: 325px;
+  width: 410px;
+  border-radius: 16px;
+  position: relative;
+
+
+}
+.vision-cards{
+  display: flex;
+  justify-content: space-between;
+}
+
+/* vision cards decor */
+
+.vision-cards .card-blue{
+  background-color: rgb(213, 225, 245);
+
+}
+.vision-cards .card-blue .btn{
+  background-color: rgb(84, 144, 245);
+}
+.vision-cards .card-green{
+  background-color: rgb(198, 228, 214);
+
+}
+.vision-cards .card-green .btn{
+  background-color: 09a15c;
+}
+.vision-cards .card-yellow{
+  background-color: rgb(247, 235, 207);
+}
+.vision-cards .card-yellow .btn{
+  background-color: rgb(255, 194, 57);
+
+}
+.vision-cards .btn{
+  padding: 11px 20px;
+  border-radius: 8px;
+  font-family: "Fira Sans", serif;
+  position: absolute;bottom: 32px;
+  border: none;
 }
