--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,16 @@ body {
   background-color: #f5f5f5;
   box-sizing: border-box;
 }
-.btn{
+.btn {
   cursor: pointer;
+
+}
+.btn:hover{
+  content: "";
+  transform: scale(1.1);
+  transition: 0.1s ease-in-out;
+  background-color: aliceblue;
+  opacity: 90%;
 }
 
 /* navbar */
@@ -35,6 +43,15 @@ nav div h3 {
   font-family: "Fira Sans", serif;
   font-weight: 700;
   font-size: 18px;
+  cursor: pointer;
+  z-index: 1;
+  position: relative;
+}
+#sign-in:hover {
+  content: "";
+  transform: scale(1.1);
+  transition: 0.1s ease-in-out;
+  background-color: #c6e4d6;
 }
 
 /* hero image section */
@@ -81,8 +98,8 @@ nav div h3 {
 }
 
 /* pillars of bangladesh section */
-.pillars-title{
-  margin-bottom: 32px; 
+.pillars-title {
+  margin-bottom: 32px;
   font-size: 40px;
   font-weight: bold;
 }
@@ -90,7 +107,7 @@ nav div h3 {
   display: flex;
   justify-content: space-between;
 }
- .pillars-card .card {
+.pillars-card .card {
   width: 302px;
   height: 244px;
   background-color: white;
@@ -106,91 +123,85 @@ nav div h3 {
 .pillars-card .card-description {
   line-height: 24px;
   font-size: 16px;
-  color:rgba(14, 14, 14, 0.7);
+  color: rgba(14, 14, 14, 0.7);
 }
 
 /* vision-section */
 
-.vision-title{
+.vision-title {
   font-size: 40px;
   margin-bottom: 24px;
   margin-top: 80px;
   font-weight: bold;
-  
 }
-.vision-description{ 
+.vision-description {
   line-height: 24px;
   font-size: 16px;
-  color:rgba(14, 14, 14, 0.7);
+  color: rgba(14, 14, 14, 0.7);
   margin-bottom: 32px;
 }
 
-.vision-section .card-description{
+.vision-section .card-description {
   line-height: 24px;
   font-size: 16px;
-  color:rgba(14, 14, 14, 0.7);
+  color: rgba(14, 14, 14, 0.7);
   width: 346px;
 }
 
-.vision-section .card-title{
+.vision-section .card-title {
   margin-top: 24px;
   margin-bottom: 12px;
   font-size: 20px;
   font-weight: bold;
   color: rgba(14, 14, 14, 0.8);
-
 }
 
-.vision-section .card{  
-    padding: 32px;
-    height: 325px;
+.vision-section .card {
+  padding: 32px;
+  height: 325px;
   width: 410px;
   border-radius: 16px;
   position: relative;
-
-
 }
-.vision-cards{
+.vision-cards {
   display: flex;
   justify-content: space-between;
 }
 
 /* vision cards decor */
 
-.vision-cards .card-blue{
+.vision-cards .card-blue {
   background-color: rgb(213, 225, 245);
-
 }
-.vision-cards .card-blue .btn{
+.vision-cards .card-blue .btn {
   background-color: rgb(84, 144, 245);
 }
-.vision-cards .card-green{
+.vision-cards .card-green {
   background-color: rgb(198, 228, 214);
-
 }
-.vision-cards .card-green .btn{
-  background-color: 09a15c;
+.vision-cards .card-green .btn {
+  background-color: #09a15c;
 }
-.vision-cards .card-yellow{
+.vision-cards .card-yellow {
   background-color: rgb(247, 235, 207);
 }
-.vision-cards .card-yellow .btn{
+.vision-cards .card-yellow .btn {
   background-color: rgb(255, 194, 57);
-
 }
-.vision-cards .btn{
+.vision-cards .btn {
   padding: 11px 20px;
   border-radius: 8px;
   font-family: "Fira Sans", serif;
-  position: absolute;bottom: 32px;
+  position: absolute;
+  bottom: 32px;
   border: none;
 }
 /* Dr. Muhammad Yunus section */
-.dr-yunus{
+.dr-yunus {
   padding: 48px 24px;
   background-color: white;
   border-radius: 16px;
-  position: relative; 
+  position: relative;
   background-repeat: no-repeat;
   background-image: url(../assets/quote-bg.png);
   background-position-y: 25px;
@@ -199,16 +210,71 @@ nav div h3 {
   margin-top: 32px;
   margin-bottom: 80px;
 }
-.dr-yunus .name{
+.dr-yunus .name {
   font-weight: 500;
   font-size: 20px;
   color: rgba(14, 14, 14, 0.8);
   margin-top: 12px;
 }
-.dr-yunus .position{
+.dr-yunus .position {
   line-height: 24px;
   color: rgba(14, 14, 14, 0.6);
 }
-.quote{
+.quote {
   line-height: 24px;
+}
+/* news section */
+.recent-section .btn{
+  background-color: #006a50;
+  padding: 13px 26px;
+  border-radius: 8px;
+  border: none;
+  color: white;
+  font-family: "Fira Sans", serif;
+  font-weight: 500;
+  font-size: 18px;
+}
+.news-section{
+  display: flex;
+  border-radius: 24px;
+  background-color: white;
+  gap: 32px;
+  padding: 48px;
+}
+.news-section .satelite{
+  border-radius: 24px;
+}
+.news{
+  width: 744px;
+}
+.recent-texts{
+  line-height: 24px;
+  font-size: 16px;
+  color: rgba(14, 14, 14, 0.7);
+
+}
+.recent-title{
+  font-weight: bold;
+  font-size: 32px;
+  margin-bottom: 12px;
+  margin-top: 8px;
+}
+.al-jazeera{
+  margin-bottom: 12px;
+}
+.recent-description{
+  margin-top: 12px;
+  margin-bottom: 32px;
+}
+.recent-date{
+  font-size: 16px;
+  color: rgba(14, 14, 14, 0.7);
+}
+.recent-section-2{
+  flex-direction: row-reverse;
+  margin-top: 24px;
+  justify-content: space-between;
+}
+.recent-text-description{
+  margin-bottom: 32px;
 }
