finally the footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -125,10 +125,10 @@ nav div h3 {
   color: rgba(14, 14, 14, 0.7);
   width: 224px;
 }
-.pillars-card img{
+.pillars-card img {
   margin-bottom: 24px;
 }
-.pillars-card .card-title{
+.pillars-card .card-title {
   margin-bottom: 12px;
 }
 /* vision-section */
@@ -371,6 +371,7 @@ nav div h3 {
   background-color: rgb(198, 228, 214);
   text-align: center;
   margin-bottom: 160px;
+  border-radius: 24px;
 }
 
 .sub-title {
@@ -405,11 +406,36 @@ nav div h3 {
   padding: 17px 34px 17px 34px;
   border: none;
   border-radius: 0 8px 8px 0px;
-  
+  cursor: pointer;
+}
+
+.sub-btn:hover{
+  background-color: aliceblue;
+  opacity: 90%;
 }
 .mix-up {
   position: relative;
   display: flex;
   justify-content: center;
   margin-bottom: 25px;
+}
+
+/* footer */
+footer div {
+  display: flex;
+  justify-content: center;
+  gap: 23px;
+  margin-bottom: 25px;
+}
+footer h1 {
+  text-align: center;
+  margin-bottom: 31px;
+  font-size: 32px;
+  font-weight: 700;
+}
+.line-breaker {
+  height: 1px;
+  background-color: rgba(14, 14, 14, 0.1);
+  width: 1122px;
+  margin: 0 auto 32px auto;
 }
