--- a/styles/style.css
+++ b/styles/style.css
@@ -167,7 +167,6 @@ nav div h3 {
   width: 410px;
   border-radius: 16px;
   position: relative;
-  border: 1px solid rgba(14, 14, 14, 0.15);
 }
 .vision-cards {
   display: flex;
@@ -363,6 +362,7 @@ nav div h3 {
 .donate-btn {
   text-align: center;
   margin-top: 32px;
+  font-family: "Fira Sans", serif;
 }
 /* subscribe-section */
 .subscribe {
@@ -407,6 +407,7 @@ nav div h3 {
   border: none;
   border-radius: 0 8px 8px 0px;
   cursor: pointer;
+  font-family: "Fira Sans", serif;
 }
 
 .sub-btn:hover{
